--- a/client/src/pages/styles.css
+++ b/client/src/pages/styles.css
@@ -1,4 +1,4 @@
-/* body {
+body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
         'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
@@ -21,39 +21,28 @@
 .page > * {
     padding: 10px;
 }
-
-.header {
-    grid-area: header;
-    background-color: lightblue;
+.articles {
+    display: grid;
+    grid-gap: 26px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
 
-.header input {
-    float: right;
+.article {
+    border: 1px solid lavenderblush;
+    padding: 10px;
 }
 
-.sidebar {
-    grid-area: sidebar;
-    background-color: lavender;
+.article > * {
+    display: inline-block;
+    padding: 4px 0;
+    margin: 4px 0;
+    width: 100%;
 }
 
-.sidebar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.sidebar ul li {
-    margin: 0 0 0 8px;
-    padding: 8px 0;
-}
-
-.content {
-    grid-area: content;
-    grid-column: span 2;
-}
-
-.footer {
-    grid-area: footer;
-    background-color: lightblue;
+.article > section[role='button'] {
+    padding: 0.2em;
+    background-color: lightgoldenrodyellow;
+    border: 1px solid lightgray;
+    cursor: pointer;
     text-align: center;
-} */
+}
