--- a/client/src/components/styles.css
+++ b/client/src/components/styles.css
@@ -1,8 +1,9 @@
+/* #f5674c */
 .header {
     grid-area: header;
     background-color: rgb(255, 255, 255);
-    border-bottom: 1px solid rgb(206, 204, 204);
-    box-shadow: 1px 2px lightgray;
+    /* border-bottom: 1px solid rgb(206, 204, 204); */
+    box-shadow: 0px 2px #f5674c;
 }
 .header__innersection {
     /* flex: 1; */
@@ -32,7 +33,9 @@
 
 .sidebar {
     grid-area: sidebar;
-    background-color: lavender;
+    background-color: white;
+    box-shadow: 0px 1px lightgray;
+    /* height: 100vh; */
 }
 
 .sidebar ul {
@@ -44,6 +47,7 @@
 .sidebar ul li {
     margin: 0 0 0 8px;
     padding: 8px 0;
+    text-decoration: none;
 }
 
 .content {
@@ -56,7 +60,7 @@
     background-color: #354044;
     text-align: center;
 
-    position: absolute;
+    /* /* position: absolute; */
     bottom: 0px;
     width: 100%;
     right: 0;
@@ -67,4 +71,46 @@
     color: white;
     line-height: 1px;
     justify-self: center;
+}
+a:link {
+    text-decoration: none;
+    color: #354044;
+}
+a:visited {
+    text-decoration: none;
+    color: #354044;
+}
+a:hover {
+    text-decoration: none;
+    color: #f5674c;
+}
+a:active {
+    text-decoration: none;
+    color: #354044;
+}
+
+.articles {
+    display: grid;
+    grid-gap: 26px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+}
+
+.article {
+    border: 1px solid lavenderblush;
+    padding: 10px;
+}
+
+.article > * {
+    display: inline-block;
+    padding: 4px 0;
+    margin: 4px 0;
+    width: 100%;
+}
+
+.article > section[role='button'] {
+    padding: 0.2em;
+    background-color: lightgoldenrodyellow;
+    border: 1px solid lightgray;
+    cursor: pointer;
+    text-align: center;
 }
