--- a/client/src/pages/styles.css
+++ b/client/src/pages/styles.css
@@ -1,4 +1,5 @@
 body {
+    flex: 1;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
         'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
@@ -16,6 +17,7 @@ body {
         'sidebar content content'
         'footer footer footer';
     margin: 6px;
+    overflow: hidden;
 }
 
 .page > * {
