--- a/client/src/pages/styles.css
+++ b/client/src/pages/styles.css
@@ -1,5 +1,5 @@
 body {
-    flex: 1;
+    /* flex: 1; */
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
         'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
@@ -23,28 +23,18 @@ body {
 .page > * {
     padding: 10px;
 }
-.articles {
-    display: grid;
-    grid-gap: 26px;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+.loader {
+    /* flex: 1; */
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    top: 50%;
+    left: 50%;
+    overflow: hidden;
 }
-
-.article {
-    border: 1px solid lavenderblush;
-    padding: 10px;
-}
-
-.article > * {
-    display: inline-block;
-    padding: 4px 0;
-    margin: 4px 0;
-    width: 100%;
-}
-
-.article > section[role='button'] {
-    padding: 0.2em;
-    background-color: lightgoldenrodyellow;
-    border: 1px solid lightgray;
-    cursor: pointer;
-    text-align: center;
+.loader__image {
+    height: 50px;
+    width: 50px;
 }
