--- a/client/src/components/styles.css
+++ b/client/src/components/styles.css
@@ -163,10 +163,11 @@ a:active {
 
 .paginationBttns {
     width: 100%;
-    height: 40px;
+    /*height: 40px; */
     list-style: none;
     display: flex;
     justify-content: center;
+    padding-top: 40px;
 }
 
 .paginationBttns a {
